# NLP-Project

./: .gitignore  README.md  VLSP_Qwen_LoRA_Medical_Summarization.ipynb  VLSP_Qwen_LoRA_Medical_Summarization.py  main.py  posttraining_schedule_sampling.py  pyproject.toml  train_transformer.py
data/: train_spm.py
notebooks/: eda.ipynb  finetune_vlsp vi2en.ipynb  finetune_vlsp.ipynb  finetune_vlsp_en2vi.ipynb  llm_eval_en2vi.ipynb  llm_eval_trans.ipynb  llm_eval_vi2en.ipynb  process-vlsp.ipynb  task1_pos_ffn.ipynb  task1_rope_ffn.ipynb  task1_rope_swiglu.ipynb  train_full_tf.ipynb  train_machine_translation.ipynb
src/: data_processor.py  dataset.py  evaluate.py  inference.py  train.py  train_with_schedule_sampling.py  utils.py  visualization.py
src/model/: decoder.py  encoder.py  feed_forward.py  multihead_attention.py  position_encoding.py  rope.py  swiglu.py  transformer.py
vlsp/: config.py  data_loader.py  inference.py  train.py
vlsp_part2/: vlsp_part2_finetune.ipynb
