[project]
name = "nlp-project"
version = "0.1.0"
description = "Transformer Machine Translation - IWSLT2015 En-Vi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets==2.21.0",
    "numpy>=2.3.5",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "sacrebleu>=2.3.1",
    "rouge-score>=0.1.2",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "transformers>=4.57.3",
    "peft>=0.18.0",
    "bitsandbytes>=0.49.0",
    "trl>=0.15.2",
    "scipy>=1.16.3",
    "accelerate>=1.12.0",
]
